[GR-76207] Cover preserved lambda access paths